# low_level_nn

./: .gitignore  LICENSE  data.txt  gnuplot_commands.txt  readme.md
src/: main.cpp
src/lecture_1/: eigen_layer.cpp  eigen_neuron.cpp  first_layer.cpp  first_neuron.cpp  readme.md  second_neuron.cpp
src/lecture_2/: eigen_transpose.cpp
src/lecture_3/dense_layer/: CMakeLists.txt  plot.cpp  sprial_train.cpp
src/lecture_3/multi_layer/: classify_spiral.cpp
src/lecture_3/spiral_data/: CMakeLists.txt  plot_spiral.cpp
src/lecture_4/: classify_spiral.cpp
src/lecture_4/multi_layer/: forward_prop.cpp
src/lecture_5/: bordcasting_summation.cpp
src/lecture_6/: activation_functions.cpp  activation_functions.h  forward_prop.cpp
src/lecture_7/: forward_prop.cpp
src/lecture_8/: CMakeLists.txt  Loss_CategoricalCrossentropy.cpp  Loss_CategoricalCrossentropy.h  accuracy.cpp  forward_prop.cpp  loss.cpp  loss.h  loss_demo.cpp  metrics.h  readme.md
